# neuromapp

neuromapp/compression/: CMakeLists.txt  bit_shifting.h  block.h
test/compression/: CMakeLists.txt  block_reading_tests.cpp  splitting_test.cpp
